[B]0.1.9[/B]
- Option added. Jumps into main menu optionally when stop playing video/audio is selected.

[B]0.1.8[/B]
- Unused code removed. Also addon-id.ctl is no longer needed (see V.0.1.6) because
  Sleepy Watchdog can now handle addons himself.

[B]0.1.7[/B]
- New action added. Watchdog can now start other addons too.

[B]0.1.6[/B]
- Mechanism for interoperability between addons implemented. TVH Powermanagement
  now creates an addon-id.ctl file that signals an active state of the addon.
  Watchdog kicks off without any action in this case.

[B]0.1.4[/B]
- Use DialogProgress instead of DialogProgressBG as this wasn't shown in fullscreen mode

[B]0.1.3[/B]
- CEC command added (turns TV off)

[B]0.1.2[/B]
- German language file added, some code enhancements

[B]0.1.1[/B]
- Initial version
