@@ -5,6 +5,7 @@
     <setting id="action" type="enum" label="32121" lvalues="32130|32131|32132|32133|32134|32135" default="0" />
     <setting id="addon_id" type="text" subsetting="true" label="32126" visible="eq(-1,5)" />
     <setting id="mainmenu" type="bool" subsetting="true" label="32127" visible="eq(-2,0)" default="false" />
+    <setting id="keepalive" type="bool" subsetting="true" label="32128" visible="eq(-3,0)" default="true" />
     <setting id="sendCEC" type="bool" label="32125" default="false" />
     <setting id="showPopup" type="bool" label="32122" default="true" />
     <setting id="notificationTime" type="labelenum" label="32123" enable="eq(-1,true)"
